<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoseleccion"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#CFA0D7"
        android:gravity="center_horizontal">


        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecciona_tablas"
            android:textSize="27sp"
            android:textColor="#0D0C0C"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <!-- CheckBox para seleccionar todas las tablas -->
        <CheckBox
            android:id="@+id/checkSeleccionarTodas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seleccionar TODAS las tablas"
            android:textColor="#0D0C0C"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <!-- Lista de CheckBox para cada tabla -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0D0C0C"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:textSize="25sp">

            <!-- CheckBoxes para cada tabla -->
            <CheckBox
                android:id="@+id/checkTabla1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_1"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_2"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_3"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/confetiContainer"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                app:lottie_fileName="confeti.json"
                app:lottie_autoPlay="false"
                app:lottie_loop="false" />

            <CheckBox
                android:id="@+id/checkTabla4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_4"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_5"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_6"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_7"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_8"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_9"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkTabla10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_del_10"
                android:textColor="#0D0C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>





        <!-- Botón de selección -->
        <Button
            android:id="@+id/botonSeleccionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#1ED118"
            android:onClick="onSeleccionarClicked"
            android:padding="22dp"
            android:text="@string/seleccionar"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
