<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/juegoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Contenedor único para ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Estrellas de progreso -->
            <LinearLayout
                android:id="@+id/progresoLayout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/estrella1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/estrellasin"
                    android:contentDescription="@string/estrella_progreso" />

                <ImageView
                    android:id="@+id/estrella2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/estrellasin"
                    android:contentDescription="@string/estrella_progreso" />

                <ImageView
                    android:id="@+id/estrella3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/estrellasin"
                    android:contentDescription="@string/estrella_progreso" />

                <ImageView
                    android:id="@+id/estrella4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/estrellasin"
                    android:contentDescription="@string/estrella_progreso" />

                <ImageView
                    android:id="@+id/estrella5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/estrellasin"
                    android:contentDescription="@string/estrella_progreso" />
            </LinearLayout>

            <!-- Contenedor para Pregunta, Cronómetro y Puntaje -->
            <LinearLayout
                android:id="@+id/contenedorTextos"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="#CFA0D7"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Pregunta -->
                <TextView
                    android:id="@+id/preguntaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/pregunta"
                    android:textColor="#0D0C0C"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <!-- Texto del Cronómetro -->
                <TextView
                    android:id="@+id/timerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/cronometro_texto"
                    android:textColor="#0D0C0C"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!-- Texto del Puntaje -->
                <TextView
                    android:id="@+id/scoreTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/puntaje_inicial"
                    android:textColor="#0D0C0C"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <!-- Indicador de Nivel Actual -->
                <TextView
                    android:id="@+id/nivelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#CFA0D7"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Nivel: 1"
                    android:textColor="#0D0C0C"
                    android:textSize="24sp" />

            </LinearLayout>

            <!-- Contenedor de Opciones -->
            <GridLayout
                android:id="@+id/gridOpciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2">

                <!-- Botones de Opciones -->
                <Button
                    android:id="@+id/opcion1Button"
                    style="@style/Boton"
                    android:layout_margin="8dp"
                    android:text="@string/opcion1"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/opcion2Button"
                    style="@style/Boton"
                    android:layout_margin="8dp"
                    android:text="@string/opcion2"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/opcion3Button"
                    style="@style/Boton"
                    android:layout_margin="8dp"
                    android:text="@string/opcion3"
                    android:textSize="26sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/opcion4Button"
                    style="@style/Boton"
                    android:layout_margin="8dp"
                    android:text="@string/opcion4"
                    android:textSize="26sp"
                    android:visibility="gone" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
